@@ -42,8 +42,8 @@ sent by TMDA.  Once they respond to the confirmation, their original
 message is deemed legitimate and is delivered to you.  Updating your
 whitelist insures they won't have to confirm future messages.  TMDA
 can even be configured to automatically whitelist confirmed senders.
-To see what the confirmation process looks like, try sending
-<a href="mailto:jason-tmdatest@mastaler.com">me</a> a test message.
+To see what the confirmation process looks like, 
+<a href="mailto:jason-tmdatest@mastaler.com">try sending me a test message</a>.
 (<strong>NOTE:</strong> Confirmed test messages are automatically discarded)
 <br><br>
 
