@@ -1,3 +1,7 @@
+2001-10-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* index.ht (Links): Emphasize test mailto: link.
+
 2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* features.ht (Links): Mention the WHITELIST_AUTO_APPEND feature.
